[package]
name = "pure-hfsm"
version = "0.1.0"
authors = ["Nicola Papale"]
description = "A finite state machine library with a clear separation between the machine definition and its changing state"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = [ "finite-state-machine", "finite-automata", "automata", "state-machine" ]
categories = ["data-structures"]
repository = "https://github.com/nicopap/pure-hfsm"
edition = "2021"

[dependencies]
smallvec = { version = "1.7", features = ["union", "const_generics"] }
serde = { version = "1.0", features = ["derive"] }
ahash = "0.7.6"
